correct path in index.css

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 /*-- scss:defaults --*/
 
 body {
-  background-image: url("img/wp15410183.png");
+  background-image: url("/img/wp15410183.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
